<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_gradient_title_bg">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_payment"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="@dimen/margin_10"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/career_develop"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_large" />

            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_235">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_150"
            android:scaleType="centerCrop"
            android:src="@mipmap/career_banner" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="2dp"
            app:cardPreventCornerOverlap="false"
            android:layout_margin="@dimen/margin_10"
            android:layout_gravity="bottom"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15"
                android:layout_marginBottom="@dimen/margin_15"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/color_9999"
                    android:drawableTop="@mipmap/net_apply"
                    android:gravity="center_horizontal"
                    android:text="@string/title_apply" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/color_9999"
                    android:drawableTop="@mipmap/title_judge"
                    android:gravity="center_horizontal"
                    android:text="@string/title_judge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/color_9999"
                    android:drawableTop="@mipmap/materials_present"
                    android:gravity="center_horizontal"
                    android:text="@string/materials_present" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_9999"
                    android:layout_weight="1"
                    android:drawableTop="@mipmap/title_inform_ser"
                    android:gravity="center_horizontal"
                    android:text="@string/title_inform_ser" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </FrameLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_career"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>





</LinearLayout>